--- a/markdown/as-yaml.mdwn
+++ b/markdown/as-yaml.mdwn
@@ -1,4 +1,4 @@
-An unordered Markdown list can be written as YAML, like this:
+An unordered Markdown list can be written as [YAML](markdown.yaml), like this:
 
     - object-group:
         - protocol:
