hide more ikiwiki stuff

--- a/sitemap.mdwn
+++ b/sitemap.mdwn
@@ -1,1 +1,1 @@
-[[!map pages="* and !favicon.ico and !ikiwiki and !index and !local.css and !sandbox and !smileys and !style.css"]]
+[[!map pages="* and !favicon.ico and !ikiwiki/* and !index and !local.css and !sandbox and !smileys/* and !style.css and !wikiicons/*"]]
