--- a/index.mdwn
+++ b/index.mdwn
@@ -1,7 +1,9 @@
-* http://greptilian.com
+You can read [[about]] this wiki or check its [[sitemap]].  There's not a lot of content yet, though I am taking a few notes about [[ubuntu]].
+
+http://greptilian.com has additional content.
+
+You might also be interested in some of these:
+
 * http://git.greptilian.com
 * http://yum.greptilian.com
 * http://thinkup.greptilian.com
-* [[about]]
-* [[ubuntu]]
-* [[sitemap]]
