show where to start listening

--- a/podcasts/security-now/design-a-computer.mdwn
+++ b/podcasts/security-now/design-a-computer.mdwn
@@ -1,4 +1,4 @@
-From http://www.grc.com/sn/sn-235.htm
+From http://www.grc.com/sn/sn-235.htm around ([46:00](http://wiki.twit.tv/wiki/Security_Now_235#Machine_Language)):
 
 Leo: Where do we start?
 
